--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity
             android:name=".activities.ItemActivity"
-            android:label="@string/item" />
+            android:label="@string/todo_detail" />
     </application>
 
 </manifest>
